[tool.poetry]
name = "planet-overlap"                   # distribution name (dash ok)
version = "1.0.0"
description = "PlanetOverlap: AOI & temporal tiling pipeline for Planet imagery"
authors = ["Brianna Lind <you@example.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "planet_overlap" }        # <- tells Poetry where the Python package lives
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
pandas = "^2.3"
shapely = "^2.1"
pyproj = "^3.7"
fiona = "^1.10"
geopandas = "^1.1.2"
requests = "^2.32"
click = "^8.3"
tzdata = "^2025.3"
python-dateutil = "^2.9"
attrs = "^25.4"
six = "^1.17"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
flake8 = "^7.3"
autoflake = "^2.3"
black = "^24.10"
memory-profiler = "^0.61"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
