[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planet_overlap"
version = "0.1.0"
description = "Tools for analyzing planetary overlap and spatial relationships."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Brianna Lind" }
]
keywords = ["geospatial", "planetary science", "overlap", "analysis"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.23",
    # Add other runtime deps explicitly here
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "flake8",
    "black",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/BriannaLind/planet_overlap"
Repository = "https://github.com/BriannaLind/planet_overlap"

[project.scripts]
planet_overlap = "planet_overlap.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
addopts = "--strict-markers --disable-warnings"
testpaths = ["tests"]
